apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'jdepend'
apply plugin: "jacoco"
apply plugin: 'build-dashboard'
apply plugin: 'maven-publish'

group = 'com.github.leyan95'
version = '0.2.30.PRE'
sourceCompatibility = 1.8

compileJava {
    options.encoding = 'UTF-8'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes 'Implementation-Title': 'pocket',
                'Implementation-Version': version
    }

    exclude "org/hv/Application.class"
    exclude "org/hv/demo"
    exclude "application*.yml"
    exclude "pocket.sql"
    exclude "./hv.png"
}

javadoc {
    options.encoding = 'UTF-8'
}

test {
    exclude '*'
}
//
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom.withXml {
                asNode().remove(asNode().get("dependencies"))
                def dependenciesNode = asNode().appendNode("dependencies")
                def lang3Node = dependenciesNode.appendNode('dependency')
                lang3Node.appendNode('groupId', 'org.apache.commons')
                lang3Node.appendNode('artifactId', 'commons-lang3')
                lang3Node.appendNode('version', '3.8.1')
                def guavaNode = dependenciesNode.appendNode('dependency')
                guavaNode.appendNode('groupId', 'com.google.guava')
                guavaNode.appendNode('artifactId', 'guava')
                guavaNode.appendNode('version', '19.0')
            }
        }
    }
}

compileJava.dependsOn(processResources)

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE')
    implementation('org.springframework.boot:spring-boot-starter-aop:2.1.1.RELEASE')
    implementation('org.apache.commons:commons-lang3:3.8.1')
    implementation ('com.google.guava:guava:19.0')
    implementation ('com.google.code.findbugs:jsr305:3.0.2')
    implementation('mysql:mysql-connector-java:8.0.13')
    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor:2.1.1.RELEASE")
    testImplementation('org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE')
}
